added loading and more functionalities

--- a/Client/src/css/Navbar.module.css
+++ b/Client/src/css/Navbar.module.css
@@ -3,6 +3,7 @@
   background-color: var(--first-color); /* Deep navy blue */
   width: 100%;
   z-index: 2;
+  padding-top: 0.5rem;
 }
 
 .topnav {
@@ -29,31 +30,6 @@
 
 .brand a:hover {
   color: var(--second-hover-color); /* Vibrant purple */
-}
-
-.option-container {
-  width: 80%;
-  max-width: 400px;
-  margin: 1rem auto;
-  background-color: var(--second-color); /* White */
-  border-radius: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 0.5rem;
-  z-index: 2;
-}
-
-.option-input {
-  width: 100%;
-  padding: 0.5rem;
-  border: none;
-  background-color: transparent;
-  color: var(--primary-font-color); /* Dark gray */
-  font-size: 16px;
-  outline: none; /* Remove the default input outline */
-}
-
-.option-input:focus {
-  outline: none; /* Remove the default input focus outline */
 }
 
 .mainnav {
@@ -131,12 +107,6 @@
     padding: 1rem 0;
     border-bottom: none;
   }
-  .option-container {
-    position: static;
-    width: auto;
-    margin: 0;
-    transform: none;
-  }
 
   .hamburger {
     display: flex;
@@ -198,15 +168,6 @@
     padding: 0.5rem;
   }
 
-  .option-container {
-    width: 90%;
-    max-width: 300px;
-  }
-
-  .option-input {
-    font-size: 14px;
-  }
-
   .mainnav {
     height: auto;
     margin-top: 0.5rem;
@@ -225,16 +186,6 @@
   .brand {
     font-size: 16px;
     padding: 0.3rem;
-  }
-
-  .option-container {
-    width: 90%;
-    max-width: 280px;
-  }
-
-  .option-input {
-    font-size: 12px;
-    padding: 0.4rem;
   }
 
   .mainnav {
