--- a/Client/src/css/CreateBlog.module.css
+++ b/Client/src/css/CreateBlog.module.css
@@ -15,6 +15,8 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
 }
 
 .blogFormInput label {
