--- a/Client/src/css/Footer.module.css
+++ b/Client/src/css/Footer.module.css
@@ -37,6 +37,7 @@ footer {
   border-radius: 50%;
   margin: 0.5rem;
   font-weight: bold;
+  cursor: pointer;
 }
 .altIcon {
   padding: 0.5rem;
@@ -45,6 +46,7 @@ footer {
   font-size: 3rem;
   margin: 0.5rem;
   font-weight: bold;
+  cursor: pointer;
 }
 .contactInfo {
   font-size: 1.1rem;
