--- a/Client/src/css/Blogs.module.css
+++ b/Client/src/css/Blogs.module.css
@@ -5,3 +5,11 @@
   flex-wrap: wrap;
   margin: 2rem auto;
 }
+h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  height: 30vh;
+  display: grid;
+  place-items: center;
+}
