--- a/Client/src/css/Blogs.module.css
+++ b/Client/src/css/Blogs.module.css
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   flex-wrap: wrap;
-  margin: 2rem auto;
+  margin: 0rem auto 2rem;
 }
 .h {
   width: 100%;
@@ -12,4 +12,10 @@
   height: 30vh;
   display: grid;
   place-items: center;
+}
+.hc {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  padding: 1rem;
 }
